@@ -1,6 +1,6 @@
-Date: 2024-04-09
+Date: 2024-04-17
 Package: CHNOSZ
-Version: 2.1.0-9
+Version: 2.1.0-10
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
